--- a/index.html
+++ b/index.html
@@ -5,18 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All From Italy</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
   </head>
   <body>
     <header>
       <div class="header_menu">
-        <a href="">Men</a>
-        <a href="">Women</a>
-        <a href="">Outlet</a>
-        <a href="">Brand</a>
+        <div class="men">
+          <a class="menu__item" href="men.html">Men</a>
+        </div>
+
+        <div class="women">
+          <a class="menu__item" href="women.html">Women</a>
+        </div>
+
+        <div class="brands">
+          <a class="menu__item" href="brands.html">Brands</a>
+        </div>
       </div>
 
-      <div class="pippo">
-        <a href="">All From Italy</a>
+      <div class="title">
+        <a href="index.html">All From Italy</a>
       </div>
 
       <div class="header__buttons">
@@ -28,21 +41,98 @@
       </div>
     </header>
     <main>
-<div class="borse">
-<img src="borse/borsa arancione.jpeg" alt="">
-<img src="borse/borsa rosa.jpeg" alt="">
-<img src="borse/borsa marrone.jpeg" alt="">
-<img src="borse/borsa blu.jpeg" alt="">
-
-</div>
-<div class="buttons_photo">
-  <a href="">SHOP MEN</a>
-  <a href="">SHOP WOMEN</a>
-</div>
-
-
-
+      <div class="borse">
+        <img src="borse/borsa arancione.jpeg" alt="" />
+        <img src="borse/borsa rosa.jpeg" alt="" />
+        <img src="borse/borsa marrone.jpeg" alt="" />
+        <img src="borse/borsa blu.jpeg" alt="" />
+      </div>
+      <div class="buttons_photo">
+        <a href="">SHOP MEN</a>
+        <a href="">SHOP WOMEN</a>
+      </div>
+      <div class="instagram">
+        <h3>FOLLOW US ON INSTAGRAM:</h3>
+        <h4>@all_from_italy_</h4>
+      </div>
     </main>
+    <footer>
+      <div class="footer_menu">
+        <div class="footer_block">
+          <h5>CUSTOMER CARE</h5>
+
+          <a href="">Contatti</a>
+          <a href="">Effettua un reso</a>
+          <a href="">Verifica lo stato dei tuoi ordini</a>
+          <a href="">Lavora con noi</a>
+        </div>
+        <div class="footer_block">
+          <h5>ALL FROM ITALY FASHION</h5>
+
+          <a href="">Le nostre Boutique</a>
+          <a href="">La nostra storia</a>
+          <a href="">Sostenibilità</a>
+          <a href="">J-MAG</a>
+        </div>
+        <div class="footer_block">
+          <h5>SHOPPING ONLINE</h5>
+
+          <a href="">Condizioni Generali di Vendita</a>
+          <a href="">Termini legali & privacy</a>
+          <a href="">Metodi di pagamento</a>
+          <a href="">Modalità di spedizione</a>
+          <a href="">Condizioni di Reso</a>
+        </div>
+        <div class="footer_block">
+          <h5>LA TUA AREA</h5>
+          <a href="">Login</a>
+          <a href="">I miei ordini</a>
+          <a href="">Wishlist</a>
+        </div>
+        <div class="footer_block">
+          <h5>LE TUE PREFERENZE</h5>
+
+          <select name="" id="">
+            <option value="">English</option>
+            <option value="">Italian</option>
+            <option value="">Russian</option>
+          </select>
+        </div>
+      </div>
+
+      <!--  <div class="slider">
+        <div><img src="img/ring.jpeg" /></div>
+        <div><img src="img/jacquemus_bag.jpeg" /></div>
+        <div><img src="img/balenciaga_t-shirt.jpeg" /></div>
+      </div> -->
+      <div class="galeria">
+        <img src="img/balenciaga_t-shirt.jpeg" alt="" />
+        <img src="img/ring.jpeg" alt="" />
+        <img src="img/jacquemus_bag.jpeg" alt="" />
+        <img src="img/balenciaga_t-shirt.jpeg" alt="" />
+        <img src="img/ring.jpeg" alt="" />
+        <img src="img/jacquemus_bag.jpeg" alt="" />
+      </div>
+
+      <div class="bottom">
+        <div class="bottom__img">
+          <a
+            href="https://instagram.com/all_from_italy_1?igshid=MzRlODBiNWFlZA=="
+            ><img src="img/instagram.png" alt=""
+          /></a>
+          <a href=""><img src="img/whatsapp.png" alt="" /></a>
+          <a href="https://t.me/all_from_italy"
+            ><img src="img/telegram.png" alt=""
+          /></a>
+        </div>
+        <p>@2023 ALL_FROM_ITALY FASHION SRL</p>
+        <div class="cards">
+          <a href=""><img src="img/paypal-logo.png" alt="" /></a>
+          <a href=""><img src="img/mastercard.png" alt="" /></a>
+          <a href=""><img src="img/credit-card.png" alt="" /></a>
+        </div>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
